--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -84,7 +84,7 @@
                             </div>
                             <div>
                                 <span class="text-title">반려문서</span>
-                                <span class="yellow-txt copy_id" th:attr="data-href=${view.copy_docid} != 0 and ${view.copy_docid} != null ? ${view.copy_docid} : 0">[[${view.copy_id}]]</span>
+                                <span class="yellow-txt copy_id" th:attr="data-href=${view.copy_docid} != 0 and ${view.copy_docid} != null ? ${path} + '/' + ${view.copy_docid} : 0">[[${view.copy_id}]]</span>
                             </div>
                             <div>
                                 <span class="text-title">참고문서</span>
